--- a/hephzisoft/static/css/style.css
+++ b/hephzisoft/static/css/style.css
@@ -1,24 +1,55 @@
 @import url('https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps&display=swap');
-/* tag */
-.tag{
-    height:100px;
+
+/* Universal  */
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
-/* navbar brand styling */
-.navbar-brand{
-    color: #6B6B5F !important;
-    font-family: 'Oleo Script Swash Caps', cursive;
-    font-size: 2em;
-    margin-left: 20px;
+
+a {
+    text-decoration: none;
 }
-/* navbar styling */
-.navbar{
-    background-color: #141601 !important;
+
+/* header(navbar)*/
+#header {
+    display: flex;
+    min-height: 10vh;
+    padding: 10px 50px;
+    background-color: rgba(20, 22, 1, 0.4);
 }
-/* nav-link styling */
-.nav-link{
-    color: red !important;
+
+.logo img {
+    height: 9vh;
+    border-radius: 50%;
 }
-/* offcanvas button */
-.offcanvas-header button{
-    margin-left: 320px;
+
+.nav-links {
+    display: flex;
+    width: 30%;
+    justify-content: space-around;
+    align-items: center;
+    list-style: none;
+    text-align: center;
+    margin-left: 20em;
+    padding-top: 10px;
+}
+
+.nav-links li a {
+    color: #141601;
+    font-size: 1.4em;
+    
+    
+}
+.burger{
+    position: absolute;
+    top: 4vh;
+    right: 10%;
+    display: none;
+}
+.burger .line1 , .line2, .line3{ 
+    background-color: green;
+    width: 30px;
+    height: 3px;
+    margin-top: 5px;
 } 
