--- a/hephzisoft/views/index.html
+++ b/hephzisoft/views/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/css/style.css">
-    <link rel="shortcut icon" href="../static/images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../static/images/logo.jpg" type="image/x-icon">
     
 
     <title>Hephzisoft || A new leading tech company in tech world</title>
@@ -16,7 +16,22 @@
   <body>
    
     
-    </header>
+   <header id="header">
+     <div class="logo">
+       <img src="../static/images/logo.jpg" alt="">
+     </div>
+     <ul class="nav-links">
+       <li> <a href="index.html">Home</a> </li>
+       <li> <a href="#about">About</a></li>
+       <li> <a href="#contact">Contact</a></li>
+     </ul>
+   </header>
+
+   <div class="burger">
+     <div class="line1"></div>
+     <div class="line2"></div>
+     <div class="line3"></div>
+   </div>
     
     
 
