--- a/hephzisoft/views/index.html
+++ b/hephzisoft/views/index.html
@@ -22,9 +22,12 @@
      </div>
      <ul class="nav-links">
        <li> <a href="index.html">Home</a> </li>
-       <li> <a href="#about">About</a></li>
-       <li> <a href="#contact">Contact</a></li>
+       <li> <a href="#about">About us</a></li>
+       <li><a href="#services">Services</a></li>
+       <button id="contact">Contact us</button>
+
      </ul>
+     
    </header>
 
    <div class="burger">
