--- a/hephzisoft/static/css/style.css
+++ b/hephzisoft/static/css/style.css
@@ -11,37 +11,47 @@ a {
     text-decoration: none;
 }
 
-/* header(navbar)*/
-#header {
+
+nav {
     display: flex;
+    justify-content: space-around;
+    align-items: center;
     min-height: 10vh;
-    padding: 10px 50px;
-    background-color: rgba(20, 22, 1, 0.4);
+    background-color: rgba(0, 0, 0, 0.2);
+    width: 100%;
+    position: fixed;
+    font-family: cursive;
 }
 
 .logo img {
-    height: 9vh;
-    border-radius: 50%;
+   height: 9vh;
+   border-radius: 50%;
+
+
+
 }
+
 
 .nav-links {
     display: flex;
-    width: 30%;
+    width: 40%;
     justify-content: space-around;
-    align-items: center;
-    list-style: none;
-    text-align: center;
     margin-left: 20em;
-    padding-top: 10px;
-}
-
-.nav-links li a {
-    color: #141601;
-    font-size: 1.4em;
-    font-family: 'Oleo Script', cursive;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 }
 
+.nav-links li {
+    list-style: none;
+}
+
+.nav-links a {
+    color: white;
+    text-decoration: none;
+    letter-spacing: 2px;
+    font-size: 1em;
+    padding: 0px 20px;
+}
 /* contact button */
 .nav-links #contact {
     border-radius: 20px;
@@ -51,7 +61,7 @@ a {
     padding: 5px 10px;
     color: white;
     position: absolute;
-    right: 10%;
+    right: 2%;
     font-family:  'Oleo Script', cursive;
 
 }
@@ -60,46 +70,88 @@ a {
     border: 2px dashed  rgba(20, 22, 1, 0.4);
 }
 
-
-/* burger icon */
 .burger {
-    /* position: absolute;
-    top: 4vh;
-    right: 10%; */
-    cursor: pointer;
     display: none;
+    cursor: pointer;
 }
 
-.burger div{
-    background-color: green;
-    width: 30px;
-    height: 3px;
-    margin-top: 5px;
+.burger div {
+    width: 25px;
+    height: 2px;
+    background-color: white;
+    margin: 5px;
     transition: all 0.3s ease;
 }
 
+@media screen and (max-width:1024px) {
+    .nav-links {
+        width: 70%;
+        margin-left: 0em;
+    }
+}
 
-
-@media screen and (max-width: 768px){
-    body{
+@media screen and (max-width:768px) {
+    body {
         overflow-x: hidden;
     }
-    .nav-links{
+
+    .nav-links {
         position: absolute;
+        right: 0px;
         height: 90vh;
         top: 10vh;
-        width:100%;
+        background-color: rgba(0, 0, 0, 0.2);
+        display: flex;
+        flex-direction: column;
+        width: 50%;
+        align-items: center;
         transform: translateX(100%);
-        transition: 0.5s all ease-in;
-
-        
-    }
-    .burger{
-        display: block;
+        transition: transform 0.5s ease-in;
 
     }
 
-    .nav-links li{
+    .nav-links li {
         opacity: 0;
     }
+
+    .burger {
+        display: block;
+    }
+
+    nav ul li:hover .sub-menu1 ul {
+        padding-left: 30px;
+    }
+
+
+
+}
+
+
+
+.nav-active {
+    transform: translateX(0%);
+}
+
+@keyframes navLinkFade {
+    from {
+        opacity: 0;
+        transform: translateX(50px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
+
+.toggle .line1 {
+    transform: rotate(-47deg) translate(-5px, 6px);
+}
+
+.toggle .line2 {
+    opacity: 0;
+}
+
+.toggle .line3 {
+    transform: rotate(50deg) translate(-5px, -6px);
 }
