--- a/hephzisoft/views/index.html
+++ b/hephzisoft/views/index.html
@@ -16,7 +16,7 @@
   <body>
    
     
-   <header id="header">
+   <nav id="header">
      <div class="logo">
        <img src="../static/images/logo.jpg" alt="">
      </div>
@@ -24,17 +24,17 @@
        <li> <a href="index.html">Home</a> </li>
        <li> <a href="#about">About us</a></li>
        <li><a href="#services">Services</a></li>
-       <button id="contact">Contact us</button>
+       <li><button id="contact" >Contact</button></li>
 
      </ul>
-     
-   </header>
+     <div class="burger">
+      <div class="line1"></div>
+      <div class="line2"></div>
+      <div class="line3"></div>
+    </div>
+   </nav>
 
-   <div class="burger">
-     <div class="line1"></div>
-     <div class="line2"></div>
-     <div class="line3"></div>
-   </div>
+   
     
     
 
