--- a/hephzisoft/views/index.html
+++ b/hephzisoft/views/index.html
@@ -21,9 +21,9 @@
        <img src="../static/images/logo.jpg" alt="">
      </div>
      <ul class="nav-links">
-       <li> <a href="index.html">Home</a> </li>
-       <li> <a href="#about">About us</a></li>
-       <li><a href="#services">Services</a></li>
+       <li> <a href="index.html" class="nav-item">Home</a> </li>
+       <li> <a href="#about" class="nav-item">About us</a></li>
+       <li><a href="#services"  class="nav-item">Services</a></li>
        <li><button id="contact" >Contact</button></li>
 
      </ul>
@@ -41,7 +41,7 @@
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="../static/js/index.js"></script>
-
+   
     
   </body>
 </html>
